pom plugin got updated