@@ -54,11 +54,14 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
+				<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.19.1</version>
 				<configuration>
+					<forkCount>3</forkCount>
+					<reuseforks>true</reuseforks>
+					<argLine>-Xmx1024m -XX:MaxPermSize-256m</argLine>
 					<suiteXmlFiles>
 						<suiteXmlFile>src/TestSuite1.xml</suiteXmlFile>
 					</suiteXmlFiles>
